...
  Widget build(BuildContext context) {
    final postsState = ref.watch(postsNotifierProvider);
    final posts = postsState.posts;

    return Scaffold(
      appBar: AppBar(
        title: const Text('Posts'),
      ),
      body: Column(
        children: [
          Expanded(
            child: postsState.error != null
                ? Center(
...
                    context,
                    MaterialPageRoute(
                      builder: (context) => CreatePostScreen(post: post),
                    ),
                  );
                },
                child: const Text('Edit'),
              ),
            ),
          ),
          CommentsSection(postId: post.id!),
        ],
      ),
...
